fixed horizontal scrollbar issue

--- a/src/app/wazazi/blog-section/blog-section.component.css
+++ b/src/app/wazazi/blog-section/blog-section.component.css
@@ -314,10 +314,6 @@ p{
         height: 14px;   
 }
 
-.likesbutton {
-       
- }
-
 .likesbutton img {
         width: 14px;
         height: 14px;
